--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Norbit portfolio</title>
     <link rel="stylesheet" href="./style/main.css">
+    <link rel="stylesheet" href="./style/projects.css">
     <link rel="stylesheet" href="./style/aboutme.css">
 </head>
 <body>
@@ -24,15 +25,22 @@
         <div class="aboutme">
             <p class="aboutme-tittle">&#60; About me /&#62;</p>
 
-        <div class="aboutme-components">
+            <div class="aboutme-components">
 
-            <div class="aboutme-logo">
-                <img src="./images/icons/avatar.png " alt="" class="aboutme-logo"> 
+                <div class="aboutme-logo">
+                    <img src="./images/icons/avatar.png " alt="" class="aboutme-logo"> 
+                </div>
+
+                <div class="aboutme-text">    
+                    <span>A passionate developer from Poland</span>
+                </div>
+            
             </div>
 
-            <div class="aboutme-text">    
-                <span>A passionate developer from Poland</span>
-            </div>
+        </div>
+        
+        <div class="myprojects">
+            <p class="myprojects-tittle">&#60; My projects/&#62;</p>
 
         </div>
     </div>
