--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- start -->
 
     <div>
-        <img src="./images/background.png" alt="background" class="image"> 
+        <img src="./images/background.png" alt="background" class="image" width="100%"> 
 
         <div class="startview">
             <p id="tiitle">Hello, I'm</p>
