--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 <body>
 
     <!-- start -->
+    <nav class="nav">
+        <ul class="nav-cont">
+          <li class="nav-item"><a href="" class="nav-style">About</a></li>
+          <li class="nav-item"><a href="" class="nav-style">Projects</a></li>
+          <li class="nav-item"><a href="" class="nav-style">Contact</a></li>
+        </ul>
+      </nav>
 
     <div>
         <img src="./images/background.png" alt="background" class="image" width="100%"> 
@@ -48,7 +55,7 @@
         <!-- projects -->
 
         <div class="myprojects">
-            <p class="myprojects-tittle">&#60; My projects/&#62;</p>
+            <p class="myprojects-tittle">&#60; My projects /&#62;</p>
 
         </div>
 
