--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <!-- start -->
     <nav class="nav">
         <ul class="nav-cont">
-          <li class="nav-item"><a href="" class="nav-style">About</a></li>
-          <li class="nav-item"><a href="" class="nav-style">Projects</a></li>
-          <li class="nav-item"><a href="" class="nav-style">Contact</a></li>
+          <li class="nav-item"><a href="#about" class="nav-style">About</a></li>
+          <li class="nav-item"><a href="#projects" class="nav-style">Projects</a></li>
+          <li class="nav-item"><a href="#contact" class="nav-style">Contact</a></li>
         </ul>
       </nav>
 
@@ -36,7 +36,7 @@
 
         <!-- about me -->
 
-        <div class="aboutme">
+        <div class="aboutme" id="about">
             <p class="aboutme-tittle">&#60; About me /&#62;</p>
 
             <div class="aboutme-components">
@@ -54,14 +54,14 @@
         
         <!-- projects -->
 
-        <div class="myprojects">
+        <div class="myprojects" id="projects">
             <p class="myprojects-tittle">&#60; My projects /&#62;</p>
 
         </div>
 
         <!-- contact-->
 
-        <div class="contact">
+        <div class="contact" id="contact">
             <p class="contact-tittle">&#60; Contact /&#62;</p>
 
             <div class="media">
