--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="startview">
             <p id="tiitle">Hello, I'm</p>
             <p class="name">Norbert Śleziak</p>
-            <p id="text">This is my portfolio</p>
+            <p id="text">A passionate developer from Poland</p>
         </div>
     </div>
 
@@ -46,7 +46,39 @@
                 </div>
 
                 <div class="aboutme-text">    
-                    <span>A passionate developer from Poland</span>
+                    <span> Hi, I'm Norbert known as Norbit<br>I'm working on discord bots, <br>backend services and minecraft plugins.</span>      
+                    <br><br>
+                    <p class="skills-tittle">Languages and Tools:</p>
+                    
+                    <div class="skills">
+                        <div class="skill-img"> 
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/java/java-original.svg" alt="" width="29px" class="media-img"> 
+                        </div>   
+
+                        <div class="skill-img"> 
+                            <img src="https://www.vectorlogo.zone/logos/kotlinlang/kotlinlang-icon.svg" alt="" width="26px" class="media-img"> 
+                        </div>  
+
+                        <div class="skill-img"> 
+                            <img src="https://www.svgrepo.com/show/354380/spring-icon.svg" alt="" width="26px" class="media-img"> 
+                        </div>  
+
+                        <div class="skill-img"> 
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg" alt="" width="26px" class="media-img"> 
+                        </div>  
+
+                        <div class="skill-img"> 
+                            <img src="./images/icons/node-js.png" alt="" width="26px" class="media-img"> 
+                        </div> 
+
+                        <div class="skill-img"> 
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/react/react-original-wordmark.svg" alt="" width="26px" class="media-img"> 
+                        </div> 
+
+                        <div class="skill-img"> 
+                            <img src="https://static.spigotmc.org/img/spigot-og.png" alt="" width="36px" class="media-img"> 
+                        </div>    
+                    </div>
                 </div>
             </div>
 
