--- a/index.html
+++ b/index.html
@@ -46,8 +46,21 @@
                 </div>
 
                 <div class="aboutme-text">    
-                    <span> Hi, I'm Norbert known as Norbit<br>I'm working on discord bots, <br>backend services and minecraft plugins.</span>      
+                    <span> Hi, I'm Norbert known as Norbit 
+                        <br>I'm working on discord bots, 
+                        <br>backend services and minecraft plugins. 
+                        <br>I also create, configure and manage 
+                        <br>minecraft and discord servers.
+                    </span>
+
                     <br><br>
+
+                    <span>I'm coding in Java, JavaScript and Kotlin,
+                        <br>on this page you will find my projects. 
+                    </span>   
+
+                    <br><br>
+
                     <p class="skills-tittle">Languages and Tools:</p>
                     
                     <div class="skills">
@@ -76,7 +89,8 @@
                         </div> 
 
                         <div class="skill-img"> 
-                            <img src="https://static.spigotmc.org/img/spigot-og.png" alt="" width="36px" class="media-img"> 
+                            <img src="https://static.spigotmc.org/img/spigot-og.png" alt="" width="35px" class="media-img"> 
+
                         </div>    
                     </div>
                 </div>
@@ -89,6 +103,17 @@
         <div class="myprojects" id="projects">
             <p class="myprojects-tittle">&#60; My projects /&#62;</p>
 
+            <div class="projects">
+                <img src="./images/projects/discordmc.png " alt="project-logo" class="projects-logo"> 
+                <p class="project-tittle">DiscordMc</p>
+                <p class="project-desc">Minecraft plugin comunicate minecraft server with discord server.</p>
+                <span class="project-desc"><br>This plugin allows you to connect your minecraft account to <br>your discord account, 
+                    use server console on discord, <br>connect minecraft chat to your discord channel and much more!</span>  
+            </div>
+
+            <div class="button-more">
+                <a href="" class="more">Read more</a>       
+            </div>                
         </div>
 
         <!-- contact-->
@@ -121,7 +146,7 @@
     <!-- footer -->
 
     <footer class="footer">
-        © Norbit4
+        © 2022 Norbit4
     </footer>
 </body>
 </html>
