--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="aboutme-components">
 
                 <div class="aboutme-logo">
-                    <img src="./images/icons/avatar.png " alt="avatar" class="aboutme-logo"> 
+                    <img src="./images/icons/avatar.png " alt="avatar" class="aboutme-logo" width="120px"> 
                 </div>
 
                 <div class="aboutme-text">    
@@ -104,7 +104,7 @@
             <p class="myprojects-tittle">&#60; My projects /&#62;</p>
 
             <div class="projects">
-                <img src="./images/projects/discordmc.png " alt="project-logo" class="projects-logo"> 
+                <img src="./images/projects/discordmc.png " alt="project-logo" class="projects-logo" width="120px"> 
                 <p class="project-tittle">DiscordMc</p>
                 <p class="project-desc">Minecraft plugin comunicate minecraft server with discord server.</p>
                 <span class="project-desc"><br>This plugin allows you to connect your minecraft account to <br>your discord account, 
