--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       </nav>
 
     <div>
-        <img src="./images/background.png" alt="background" class="image" width="100%"> 
+        <img src="./images/background.png" alt="background" class="image"> 
 
         <div class="startview">
             <p id="tiitle">Hello, I'm</p>
-            <p class="name">Norbert Śleziak</p>
+            <p class="name-aboutme">Norbert Śleziak</p>
             <p id="text">A passionate developer from Poland</p>
         </div>
     </div>
@@ -65,7 +65,7 @@
                     
                     <div class="skills">
                         <div class="skill-img"> 
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/java/java-original.svg" alt="" width="29px" class="media-img"> 
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/java/java-original.svg" alt="" width="29vw" class="media-img"> 
                         </div>   
 
                         <div class="skill-img"> 
