--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
       </nav>
 
     <div>
-        <img src="./images/background.png" alt="background" class="image" width="100%"> 
+        <img src="./images/background.png" alt="background" class="image" width="100%" height="500vh"> 
 
         <div class="startview">
             <p id="tiitle">I'm coding in</p>
