--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./style/projects.css">
     <link rel="stylesheet" href="./style/aboutme.css">
     <link rel="stylesheet" href="./style/contact.css">
+
+    <script src="./scripts/letters.js"></script>
 </head>
 <body>
 
@@ -28,6 +30,7 @@
         <div class="startview">
             <p id="tiitle">Hello, I'm</p>
             <p class="name-aboutme">Norbert Śleziak</p>
+
             <p id="text">A passionate developer from Poland</p>
         </div>
     </div>
