--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,8 @@
         <div class="myprojects" id="projects">
             <p class="myprojects-tittle">&#60; My projects /&#62;</p>
 
+            <!-- projects sec 1 -->
+
             <div class="all-projects">
 
                 <div class="project">
@@ -50,9 +52,9 @@
                 </div>
 
                 <div class="project">
-                    <a href="https://github.com/Norbit4/PopeBot" target="_blank" class="project-text"> 
-                        <img src="./images/projects/pope.png" alt="project-logo" class="projects-logo"> 
-                        <p><b>PopeBot</b></p>
+                    <a href="https://github.com/Norbit4/ChatApp" target="_blank" class="project-text"> 
+                        <img src="./images/projects/chat.png" alt="project-logo" class="projects-logo"> 
+                        <p><b>ChatAPP</b></p>
                         <span class="link"></span>
                     </a>
                 </div>
@@ -73,8 +75,27 @@
                         <span class="link"></span>
                     </a>
                 </div>
-                
+            </div>
 
+            <!-- projects sec 2 -->
+
+            <div class="all-projects">
+
+                <div class="project">
+                    <a href="https://github.com/Norbit4/MultiPlayer-Lib" target="_blank" class="project-text"> 
+                        <img src="./images/projects/bookshelf.png" alt="project-logo" class="projects-logo"> 
+                        <p><b>MultiplayerLib</b></p>
+                        <span class="link"></span>
+                    </a>
+                </div>
+
+                <div class="project">
+                    <a href="https://github.com/Norbit4/PopeBot" target="_blank" class="project-text"> 
+                        <img src="./images/projects/pope.png" alt="project-logo" class="projects-logo"> 
+                        <p><b>PopeBot</b></p>
+                        <span class="link"></span>
+                    </a>
+                </div>
             </div>
             
         </div>
