--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,9 @@
                 <div class="project">
                     <a href="https://github.com/Norbit4/DiscordMc" target="_blank" class="project-text"> 
                         <img src="./images/projects/discordmc.png " alt="project-logo" class="projects-logo"> 
-                        <p><b>DiscordMc</b></p>
+                        <p class="project-name">DiscordMc</p>
+                        <p class="project-desc">Sync your mc server</p>
+                        <p class="project-desc">with discord server</p>
                         <span class="link"></span>
                     </a>
                 </div>
@@ -54,7 +56,9 @@
                 <div class="project">
                     <a href="https://github.com/Norbit4/ChatApp" target="_blank" class="project-text"> 
                         <img src="./images/projects/chat.png" alt="project-logo" class="projects-logo"> 
-                        <p><b>ChatAPP</b></p>
+                        <p class="project-name">ChatAPP</p>
+                        <p class="project-desc">Backend server</p>
+                        <p class="project-desc">like omegle.com</p>
                         <span class="link"></span>
                     </a>
                 </div>
@@ -62,7 +66,9 @@
                 <div class="project">
                     <a href="https://github.com/Norbit4/KittyAPI" target="_blank" class="project-text"> 
                         <img src="./images/projects/cat.png" alt="project-logo" class="projects-logo"> 
-                        <p><b>KittyAPI</b></p>
+                        <p class="project-name">KittyAPI</p>
+                        <p class="project-desc"></p>
+                        <p class="project-desc"> GET your cat</p>
                         <span class="link"></span>
                     </a>
                 </div>
@@ -71,7 +77,9 @@
                 <div class="project">
                     <a href="https://github.com/Norbit4/MinecraftBot" target="_blank" class="project-text"> 
                         <img src="./images/projects/robot.png " alt="" class="projects-logo"> 
-                        <p><b>MinecraftBots</b></p>
+                        <p class="project-name">MinecraftBots</p>
+                        <p class="project-desc"> Bots for testing </p>
+                        <p class="project-desc"> minecraft servers </p>
                         <span class="link"></span>
                     </a>
                 </div>
@@ -84,7 +92,19 @@
                 <div class="project">
                     <a href="https://github.com/Norbit4/MultiPlayer-Lib" target="_blank" class="project-text"> 
                         <img src="./images/projects/bookshelf.png" alt="project-logo" class="projects-logo"> 
-                        <p><b>MultiplayerLib</b></p>
+                        <p class="project-name">MultiplayerLib</p>
+                        <p class="project-desc"></p>
+                        <p class="project-desc">Easier to use sockets</p>
+                        <span class="link"></span>
+                    </a>
+                </div>
+
+                <div class="project">
+                    <a href="https://github.com/Norbit4/PluginUtils" target="_blank" class="project-text"> 
+                        <img src="https://static.spigotmc.org/img/spigot-og.png" alt="project-logo" class="projects-logo"> 
+                        <p class="project-name">PluginUtils</p>
+                        <p class="project-desc">Minecraft Plugin</p>
+                        <p class="project-desc">Library</p>
                         <span class="link"></span>
                     </a>
                 </div>
@@ -92,7 +112,9 @@
                 <div class="project">
                     <a href="https://github.com/Norbit4/PopeBot" target="_blank" class="project-text"> 
                         <img src="./images/projects/pope.png" alt="project-logo" class="projects-logo"> 
-                        <p><b>PopeBot</b></p>
+                        <p class="project-name">PopeBot</p>
+                        <p class="project-desc">Funny discord bot</p>
+
                         <span class="link"></span>
                     </a>
                 </div>
