--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,7 @@
         <ul class="nav-cont">
             <li class="nav-item"><a href="index.html" class="nav-style">About</a></li>
             <li class="nav-item"><a href="projects.html" class="nav-style">Projects</a></li>
+            <!-- <li class="nav-item"><a href="reviews.html" class="nav-style">Reviews</a></li> -->
             <li class="nav-item"><a href="contact.html"class="nav-style">Contact</a></li>
         </ul>
       </nav>
@@ -27,7 +28,7 @@
 
         <div class="startview">
             <p id="tiitle">I'm coding in</p>
-            <p class="name">Java</p>
+            <p id="name">Java</p>
             <p id="text">Look below!</p>
         </div>
     </div>
@@ -37,7 +38,7 @@
         <!-- projects -->
 
         <div class="myprojects" id="projects">
-            <p class="myprojects-tittle">&#60; My projects /&#62;</p>
+            <p class="next-tittle">&#60; My projects /&#62;</p>
 
             <!-- projects sec 1 -->
 
@@ -54,21 +55,21 @@
                 </div>
 
                 <div class="project">
-                    <a href="https://github.com/Norbit4/ChatApp" target="_blank" class="project-text"> 
-                        <img src="./images/projects/chat.png" alt="project-logo" class="projects-logo"> 
-                        <p class="project-name">ChatAPP</p>
-                        <p class="project-desc">Backend server</p>
-                        <p class="project-desc">like omegle.com</p>
-                        <span class="link"></span>
-                    </a>
-                </div>
-
-                <div class="project">
                     <a href="https://github.com/Norbit4/KittyAPI" target="_blank" class="project-text"> 
                         <img src="./images/projects/cat.png" alt="project-logo" class="projects-logo"> 
                         <p class="project-name">KittyAPI</p>
                         <p class="project-desc"></p>
                         <p class="project-desc"> GET your cat</p>
+                        <span class="link"></span>
+                    </a>
+                </div>
+
+                <div class="project">
+                    <a href="/tiktokbot.html" class="project-text"> 
+                        <img src="./images/projects/tik-tok.png" alt="project-logo" class="projects-logo"> 
+                        <p class="project-name">TikTokBOT</p>
+                        <p class="project-desc"></p>
+                        <p class="project-desc">LIVE</p>
                         <span class="link"></span>
                     </a>
                 </div>
@@ -118,6 +119,22 @@
                         <span class="link"></span>
                     </a>
                 </div>
+            </div>
+
+            <!-- projects sec 3 -->
+
+            <div class="all-projects">
+
+                <div class="project">
+                    <a href="https://github.com/Norbit4/ChatApp" target="_blank" class="project-text"> 
+                        <img src="./images/projects/chat.png" alt="project-logo" class="projects-logo"> 
+                        <p class="project-name">ChatAPP</p>
+                        <p class="project-desc">Backend server</p>
+                        <p class="project-desc">like omegle.com</p>
+                        <span class="link"></span>
+                    </a>
+                </div>
+
             </div>
             
         </div>
