--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,6 @@
     <title>Norbit4</title>
     <link rel="icon" href="images/icons/avatar.png">
     <link rel="stylesheet" href="./style/main.css">
-    <link rel="stylesheet" href="./style/projects.css">
-    <link rel="stylesheet" href="./style/aboutme.css">
     <link rel="stylesheet" href="./style/contact.css">
 </head>
 <body>
@@ -28,7 +26,7 @@
 
         <div class="startview">
             <p id="tiitle">Do you have any order?</p>
-            <p class="name">Contact me</p>
+            <p id="name">Contact me</p>
             <p id="text">Waiting...</p>
         </div>
     </div>
@@ -38,7 +36,7 @@
         <!-- contact-->
 
         <div class="contact" id="contact">
-            <p class="contact-tittle">&#60; Contact /&#62;</p>
+            <p class="next-tittle">&#60; Contact /&#62;</p>
 
             <div class="media">
                 <div class="media-img"> <img src="./images/icons/discord.png" alt="" width="30px" lass="media-img"> </div>
