--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Norbit4</title>
     <link rel="icon" href="images/icons/avatar.png">
     <link rel="stylesheet" href="./style/main.css">
-    <link rel="stylesheet" href="./style/projects.css">
     <link rel="stylesheet" href="./style/aboutme.css">
-    <link rel="stylesheet" href="./style/contact.css">
 
     <script src="./scripts/letters.js"></script>
 </head>
@@ -20,6 +18,7 @@
         <ul class="nav-cont">
             <li class="nav-item"><a href="index.html" class="nav-style">About</a></li>
             <li class="nav-item"><a href="projects.html" class="nav-style">Projects</a></li>
+            <!-- <li class="nav-item"><a href="reviews.html" class="nav-style">Reviews</a></li> -->
             <li class="nav-item"><a href="contact.html"class="nav-style">Contact</a></li>
         </ul>
       </nav>
@@ -29,8 +28,7 @@
 
         <div class="startview">
             <p id="tiitle">Hello, I'm</p>
-            <p class="name-aboutme">Norbert Śleziak</p>
-
+            <p id="name">Norbert Śleziak</p>
             <p id="text">A passionate developer from Poland</p>
         </div>
     </div>
@@ -40,7 +38,7 @@
         <!-- about me -->
 
         <div class="aboutme" id="about">
-            <p class="aboutme-tittle">&#60; About me /&#62;</p>
+            <p class="next-tittle">&#60; About me /&#62;</p>
 
             <div class="aboutme-components">
 
