--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./style/projects.css">
     <link rel="stylesheet" href="./style/aboutme.css">
     <link rel="stylesheet" href="./style/contact.css">
+
+    <script src="./scripts/projects.js"></script>
 </head>
 <body>
 
@@ -18,7 +20,6 @@
         <ul class="nav-cont">
             <li class="nav-item"><a href="index.html" class="nav-style">About</a></li>
             <li class="nav-item"><a href="projects.html" class="nav-style">Projects</a></li>
-            <!-- <li class="nav-item"><a href="reviews.html" class="nav-style">Reviews</a></li> -->
             <li class="nav-item"><a href="contact.html"class="nav-style">Contact</a></li>
         </ul>
       </nav>
@@ -28,7 +29,7 @@
 
         <div class="startview">
             <p id="tiitle">I'm coding in</p>
-            <p id="name">Java</p>
+            <p id="name">J</p>
             <p id="text">Look below!</p>
         </div>
     </div>
