--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style/main.css">
     <link rel="stylesheet" href="./style/aboutme.css">
 
-    <script src="./scripts/letters.js"></script>
+    <script src="./scripts/home.js"></script>
 </head>
 <body>
 
@@ -18,7 +18,6 @@
         <ul class="nav-cont">
             <li class="nav-item"><a href="index.html" class="nav-style">About</a></li>
             <li class="nav-item"><a href="projects.html" class="nav-style">Projects</a></li>
-            <!-- <li class="nav-item"><a href="reviews.html" class="nav-style">Reviews</a></li> -->
             <li class="nav-item"><a href="contact.html"class="nav-style">Contact</a></li>
         </ul>
       </nav>
@@ -28,7 +27,7 @@
 
         <div class="startview">
             <p id="tiitle">Hello, I'm</p>
-            <p id="name">Norbert Śleziak</p>
+            <p id="name">N</p>
             <p id="text">A passionate developer from Poland</p>
         </div>
     </div>
