--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
     <link rel="icon" href="images/icons/avatar.png">
     <link rel="stylesheet" href="./style/main.css">
     <link rel="stylesheet" href="./style/contact.css">
+
+    <script src="./scripts/contact.js"></script>
 </head>
 <body>
 
@@ -16,7 +18,6 @@
         <ul class="nav-cont">
             <li class="nav-item"><a href="index.html" class="nav-style">About</a></li>
             <li class="nav-item"><a href="projects.html" class="nav-style">Projects</a></li>
-            <!-- <li class="nav-item"><a href="reviews.html" class="nav-style">Reviews</a></li> -->
             <li class="nav-item"><a href="contact.html"class="nav-style">Contact</a></li>
         </ul>
       </nav>
@@ -27,7 +28,7 @@
         <div class="startview">
             <p id="tiitle">Do you have any order?</p>
             <p id="name">Contact me</p>
-            <p id="text">Waiting...</p>
+            <p id="text">Waiting</p>
         </div>
     </div>
 
