--- a/tiktokbot.html
+++ b/tiktokbot.html
@@ -64,7 +64,7 @@
     <!-- footer -->
 
     <footer class="footer">
-        © 2022 Norbit4
+        © 2022-2023 Norbit4
     </footer>
 </body>
 </html>
