--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
             <div class="all-projects">
 
                 <div class="project">
-                    <a href="https://github.com/Norbit4/DiscordMc" target="_blank" class="project-text"> 
+                    <a href="https://www.spigotmc.org/resources/%E2%9C%A8discordmc-1-8-1-19-%E2%9C%A8-sync-your-minecraft-server-with-discord-server-%E2%9C%85.103901/" target="_blank" class="project-text"> 
                         <img src="./images/projects/discordmc.png " alt="project-logo" class="projects-logo"> 
                         <p class="project-name">DiscordMc</p>
                         <p class="project-desc">Sync your mc server</p>
@@ -66,11 +66,11 @@
                 </div>
 
                 <div class="project">
-                    <a href="/tiktokbot.html" class="project-text"> 
-                        <img src="./images/projects/tik-tok.png" alt="project-logo" class="projects-logo"> 
-                        <p class="project-name">TikTokBOT</p>
+                    <a href="https://www.spigotmc.org/resources/treecuter.110213/" class="project-text"> 
+                        <img src="./images/projects/treecuter.png" alt="project-logo" class="projects-logo"> 
+                        <p class="project-name">TreeCuter</p>
                         <p class="project-desc"></p>
-                        <p class="project-desc">LIVE</p>
+                        <p class="project-desc">CUT</p>
                         <span class="link"></span>
                     </a>
                 </div>
@@ -123,20 +123,6 @@
             </div>
 
             <!-- projects sec 3 -->
-
-            <div class="all-projects">
-
-                <div class="project">
-                    <a href="https://github.com/Norbit4/ChatApp" target="_blank" class="project-text"> 
-                        <img src="./images/projects/chat.png" alt="project-logo" class="projects-logo"> 
-                        <p class="project-name">ChatAPP</p>
-                        <p class="project-desc">Backend server</p>
-                        <p class="project-desc">like omegle.com</p>
-                        <span class="link"></span>
-                    </a>
-                </div>
-
-            </div>
             
         </div>
     </div>
