update style and desc

--- a/index.html
+++ b/index.html
@@ -45,22 +45,24 @@
                     <img src="./images/icons/avatar.png " alt="avatar" class="aboutme-logo" width="120px"> 
                 </div>
 
-                <div class="aboutme-text">    
-                    <span> Hi, I'm Norbert known as Norbit 
-                        <br>I'm working on discord bots, 
-                        <br>backend services and minecraft plugins. 
-                        <br>I also create, configure and manage 
-                        <br>minecraft and discord servers.
+                <div class="aboutme-text">  
+                    <span> 
+                        Hi there! I'm Norbert, also known as <b>Norbit</b>. 
+                        <br><br>
+                        I'm a freelance developer specializing in creating Discord bots, backend services, and Minecraft plugins.
+                        I also design, configure, and manage Minecraft and Discord servers. I have been coding since 2021, 
+                        and my expertise lies in Java, JavaScript, Python, and Kotlin. On this page, you'll find a showcase of my projects.
+                        <br><br>
+                        As a freelancer, I'm passionate about crafting innovative solutions for the Discord community,
+                        Minecraft enthusiasts, and backend requirements. I bring my extensive knowledge and experience 
+                        in these technologies to create advanced and functional solutions for my clients.
+                        <br><br>
+                        If you're interested in my services or have any inquiries about potential collaborations, 
+                        feel free to get in touch. Together, we can create something exceptional and tailored to your specific needs.
                     </span>
+                </div>
 
-                    <br><br>
-
-                    <span>I'm coding in Java, JavaScript and Kotlin,
-                        <br>on this page you will find my projects. 
-                    </span>   
-
-                    <br><br>
-
+                <div class="skills-main">
                     <p class="skills-tittle">Languages and Tools:</p>
                     
                     <div class="skills">
@@ -73,7 +75,7 @@
                         </div>  
 
                         <div class="skill-img"> 
-                            <img src="https://www.svgrepo.com/show/354380/spring-icon.svg" alt="" width="26px" class="media-img"> 
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg" alt="" width="26px" class="media-img"> 
                         </div>  
 
                         <div class="skill-img"> 
@@ -81,11 +83,15 @@
                         </div>  
 
                         <div class="skill-img"> 
+                            <img src="https://www.svgrepo.com/show/354380/spring-icon.svg" alt="" width="26px" class="media-img"> 
+                        </div>  
+
+                        <div class="skill-img"> 
                             <img src="./images/icons/node-js.png" alt="" width="26px" class="media-img"> 
                         </div> 
 
                         <div class="skill-img"> 
-                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/react/react-original-wordmark.svg" alt="" width="26px" class="media-img"> 
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/linux/linux-original.svg" alt="" width="26px" class="media-img"> 
                         </div> 
 
                         <div class="skill-img"> 
@@ -93,7 +99,6 @@
 
                         </div>    
                     </div>
-                </div>
             </div>
 
         </div>
