--- a/index.html
+++ b/index.html
@@ -50,11 +50,14 @@
                         Hi there! I'm Norbert, also known as <b>Norbit</b>. 
                         <br><br>
                         I'm a freelance developer specializing in creating Discord bots, backend services, and Minecraft plugins.
-                        I also design, configure, and manage Minecraft and Discord servers. I have been coding since 2021, 
+                        I also design, configure, and manage Minecraft and Discord servers. 
+                        <br>
+                        I have been coding since 2021, 
                         and my expertise lies in Java, JavaScript, Python, and Kotlin. On this page, you'll find a showcase of my projects.
                         <br><br>
                         As a freelancer, I'm passionate about crafting innovative solutions for the Discord community,
-                        Minecraft enthusiasts, and backend requirements. I bring my extensive knowledge and experience 
+                        Minecraft enthusiasts, and backend requirements. 
+                        <br>I bring my extensive knowledge and experience 
                         in these technologies to create advanced and functional solutions for my clients.
                         <br><br>
                         If you're interested in my services or have any inquiries about potential collaborations, 
