--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
                 </div>
 
                 <div class="project">
-                    <a href="https://www.spigotmc.org/resources/treecuter.110213/" class="project-text"> 
+                    <a href="https://www.spigotmc.org/resources/treecuter.110213/" target="_blank" class="project-text"> 
                         <img src="./images/projects/treecuter.png" alt="project-logo" class="projects-logo"> 
                         <p class="project-name">TreeCuter</p>
                         <p class="project-desc"></p>
