--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
             <div class="media">
                 <div class="media-img"> <img src="./images/icons/discord.png" alt="" width="30px" lass="media-img"> </div>
                 
-                <div class="media-t"> <p class="media-text discord">BORBI#2685</p> </div>  
+                <div class="media-t"> <p class="media-text discord">n0rbit</p> </div>  
             </div>
             
             <div class="media">
