--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
             <div class="all-projects">
 
                 <div class="project">
-                    <a href="https://www.spigotmc.org/resources/%E2%9C%A8discordmc-1-8-1-19-%E2%9C%A8-sync-your-minecraft-server-with-discord-server-%E2%9C%85.103901/" target="_blank" class="project-text"> 
+                    <a href="https://docs.n0rbit.pl/free-resource/discordmc/" target="_blank" class="project-text"> 
                         <img src="./images/projects/discordmc.png " alt="project-logo" class="projects-logo"> 
                         <p class="project-name">DiscordMc</p>
                         <p class="project-desc">Sync your mc server</p>
@@ -66,7 +66,7 @@
                 </div>
 
                 <div class="project">
-                    <a href="https://www.spigotmc.org/resources/treecuter.110213/" target="_blank" class="project-text"> 
+                    <a href="https://docs.n0rbit.pl/free-resource/treecuter" target="_blank" class="project-text"> 
                         <img src="./images/projects/treecuter.png" alt="project-logo" class="projects-logo"> 
                         <p class="project-name">TreeCuter</p>
                         <p class="project-desc"></p>
@@ -92,11 +92,11 @@
             <div class="all-projects">
 
                 <div class="project">
-                    <a href="https://github.com/Norbit4/MultiPlayer-Lib" target="_blank" class="project-text"> 
+                    <a href="https://docs.n0rbit.pl/free-resource/bettercommands" target="_blank" class="project-text"> 
                         <img src="./images/projects/bookshelf.png" alt="project-logo" class="projects-logo"> 
-                        <p class="project-name">MultiplayerLib</p>
-                        <p class="project-desc"></p>
-                        <p class="project-desc">Easier to use sockets</p>
+                        <p class="project-name">BetterCommands</p>
+                        <p class="project-desc">Easily create</p>
+                        <p class="project-desc">commands</p>
                         <span class="link"></span>
                     </a>
                 </div>
@@ -105,8 +105,8 @@
                     <a href="https://github.com/Norbit4/PluginUtils" target="_blank" class="project-text"> 
                         <img src="https://static.spigotmc.org/img/spigot-og.png" alt="project-logo" class="projects-logo"> 
                         <p class="project-name">PluginUtils</p>
-                        <p class="project-desc">Minecraft Plugin</p>
-                        <p class="project-desc">Library</p>
+                        <p class="project-desc"></p>
+                        <p class="project-desc">Lib</p>
                         <span class="link"></span>
                     </a>
                 </div>
